[project]
name = "argos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lucifer516-sudoer", email = "harishvengatachalam02092005@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.3",
    "qdrant-client>=1.16.0",
    "rich>=14.2.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
argos = "argos:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
